--- a/src/css/blocks/accordion.css
+++ b/src/css/blocks/accordion.css
@@ -3,29 +3,82 @@
   width: 100%;
   margin: 0 auto;
 
+  &-info {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    font-family: 'Open Sans';
+    font-size: 14px;
+    line-height: 1.43;
+    color: #55707e;
+
+    .niche-title {
+      flex: 1;
+    }
+    .volume {
+      width: 130px;  
+      text-align: center;
+    }
+    .audience {
+      width: 150px;  
+      text-align: right;
+    }
+  }
+
   &-row {
-    margin: 10px 0;
+    margin: 5px 0;
     transition: all .5s ease;
+
+    &.open {
+
+      .accordion-header {
+
+        .niche-title {
+        color: green;
+        }
+      }
+  
+      .accordion-content {
+        max-height: 1000px;
+        transition: all .5s ease-in; 
+      }
+    }
+
   }
 
   &-header {
-    height: 70px;
-    background-color: rgb(11, 93, 109);
-    border-radius: 10px;
-    display: flex;
-    color: white;
+    width: 100%;
+    height: 60px;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.08);
+    color: #55707e;
+    padding: 0 20px;
+    border: solid 1px #e8e8e8;
     align-items: center;
     cursor: pointer;
-    padding: 10px 20px;
-    position: relative;
-    transition: all .7s ease;
-
-    .expand {
-      position: absolute;
-      right: 30px;
-      top: 35px;
-      transition: all .5s cubic-bezier(0.080, 1.090, 0.320, 1.275);
+    display: flex;
+    justify-content: space-between;
+    
+    .niche-title {
+      flex: 1;
+      transition: all .7s ease;
+      position: relative;
+      
+      .chevron {
+        position: relative;
+        font-size: 16px;
+        top: 2px;
+      }
     }
+    .volume {
+      width: 130px;  
+      text-align: center;
+    }
+    .audience {
+      width: 130px;  
+      text-align: right;
+    }
+
   }
   &-content {
     overflow: hidden;
@@ -35,23 +88,34 @@
     transition: all .5s ease;
     
     .wr {
-      padding: 20px;
+      padding: 0;
     }
   }
   
-  &-row.open {
-
-    .accordion-header {
-      border-radius: 10px 10px 0 0;
-    }
-
-    .accordion-content {
-      max-height: 1000px;
-      transition: all .5s ease-in; 
-    }
-
-    .expand {
-      transform: rotate(180deg)
-    }
+  
+  .big {
+    display: block;
+    margin: 35px auto;
   }
+
+  .checkbox input[type=checkbox]:checked + i.material-icons {
+    color: green;
+    opacity: 1;
+}
+.checkbox__item {
+  margin-left: 15px;
+  
+  .submenu {
+    .checkbox__label {
+      padding-left: 25px;
+     }
+  }
+}
+.checkbox__label {
+  padding-left: 35px;
+
+}
+.checkbox__label {
+  border-bottom: none;
+}
 }
