--- a/src/css/blocks/checkbox.css
+++ b/src/css/blocks/checkbox.css
@@ -3,11 +3,10 @@
   margin: 10px 0;
   width: 100%;
   border-radius: 2px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(216, 216, 216, 0)), to(rgba(216, 216, 216, 0)));
-  background-image: linear-gradient(rgba(216, 216, 216, 0), rgba(216, 216, 216, 0));
-  background-blend-mode: multiply;
-  -webkit-box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .14);
-          box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .14);
+
+  i {
+    color: #55707e;
+  }
 
   .submenu {
     max-height: 0px;
@@ -21,9 +20,10 @@
   .chevron {
     position: absolute;
     cursor: pointer;
-    top: 12px;
-    left: 7px;
+    top: 16px;
+    left: 15px;
     transition: all .5s cubic-bezier(0.080, 1.090, 0.320, 1.275);
+    font-size: 15px;
   }
   .chevron.open {
     transform: rotate(90deg);
@@ -43,7 +43,7 @@
     left: -9999px;
   }
   .checkbox__label {
-    padding-left: 35px;
+        padding-left: 20px;
     display: flex;
     cursor: pointer;
     border-bottom: 1px solid rgba(0, 0, 0, .12);
@@ -52,6 +52,7 @@
     padding-right: 15px;
     font-size: 13px;
     padding-left: 10px;
+    color: #55707e;
   }
   .checkbox__icon.material-icons {
     line-height: 47px;
