--- a/src/css/blocks/general.css
+++ b/src/css/blocks/general.css
@@ -1,4 +1,48 @@
 body {
-  background-color: lightcyan;
-  font-family: 'Roboto';
+  background-color: white;
+  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Roboto', sans-serif; */
 }
+
+* {
+  box-sizing: border-box;  
+}
+
+.wr {
+  max-width: 1100px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.title {
+  font-family: 'Open Sans';
+  font-size: 16px;
+  font-weight: 600;
+  color: #37474f;
+}
+.subtitle {
+  font-family: 'Roboto';
+  margin: 30px 0 15px;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.87)
+}
+.text-input {
+  height: 36px;
+  margin: 0 16px;
+  width: 100%;
+  line-height: 36px;
+  border-radius: 3px;
+  border: solid 1px #e3e3e3;
+  outline: none;
+  padding: 0 12px;
+}
+::placeholder { 
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.71;
+  color: #a8a8a8;
+}
+
