--- a/src/css/blocks/data-table.css
+++ b/src/css/blocks/data-table.css
@@ -5,6 +5,12 @@ div.material-table {
   line-height: 1.71;
   text-align: left;
   color: rgba(0, 0, 0, 0.87);
+  .checkbox__label {
+    border-bottom: 0;
+  }
+  td, th {
+    border-radius: 0;
+  }
 
   .odd {
     background-color: #f7f7f7;
@@ -170,7 +176,7 @@ div.material-table table tr td:nth-child(2) {
   /* height: 48px; */
   /* font-size: 13px; */
   color: rgba(0, 0, 0, 0.87);
-  border-bottom: solid 1px #DDDDDD;
+  /* border-bottom: solid 1px #DDDDDD; */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
