--- a/src/css/modules/tabs.css
+++ b/src/css/modules/tabs.css
@@ -1,5 +1,5 @@
 .tabs {
-  width: 888px;
+  max-width: 952px;
 	height: 100%;
 	border-radius: 8px;
 	background-color: rgba(255, 255, 255, 0.9);
@@ -80,14 +80,15 @@
 
 }
 
-@media screen and (min-width: 1156px) {
+
+@media screen and (max-width: 1396px) {
   .tabs {
-    width: 772px;
+    width: 40em;
   }
 
 }
-@media screen and (min-width: 1660px) {
+@media screen and (max-width: 1156px) {
   .tabs {
-    width: 952px;
+    width: 772px;
   }
 }
