--- a/src/templates/master.hbs
+++ b/src/templates/master.hbs
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+	{{> head }}
+<body>
+
+
+	<div class="wrapper">
+
+    {{> sidebar }}
+
+		<article class="main">
+
+      {{> tabs}}
+ 
+		</article>
+	</div>
+
+	<script src="/js/vendor/jquery.js"></script>
+	<script src="/js/main.js"></script>
+</body>
+</html>
+
+
+
 <!doctype html>
 <html>
 	{{> head }}
