--- a/old-dist/css/styles.css
+++ b/old-dist/css/styles.css
@@ -311,7 +311,7 @@ body {
 }
 .main {
   background-image: linear-gradient(48deg, #eeeeee, #fafafa);
-  width: auto;
+  width: 100%;
   min-height: 100vh;
   padding: 32px 32px 64px;
 }
