--- a/src/css/modules/general.css
+++ b/src/css/modules/general.css
@@ -13,7 +13,7 @@ body {
 
 .main {
   background-image: linear-gradient(48deg, #eeeeee, #fafafa);
-  width: 100%;
+  width: auto;
   min-height: 100vh;
   padding: 32px 32px 64px;
 }
