--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,2 @@
-body {
-  background-color: azure;
-}
-h1 {
-  color: lightcoral;
-  font-size: 50px;
-}
+@import "./vendor/**.css";
+@import "./modules/**.css";
