svg almost done

--- a/src/img/new/sprite.css
+++ b/src/img/new/sprite.css
@@ -1,5 +1,5 @@
 .svg-arrow-1 {
-	background: url("svg/sprite.css-479d0554.svg") 0 0 no-repeat;
+	background: url("../svg-spritess-479d0554.svg") 0 0 no-repeat;
 }
 
 .svg-arrow-1-dims {
@@ -8,7 +8,7 @@
 }
 
 .svg-arrow-2 {
-	background: url("svg/sprite.css-479d0554.svg") 99.96592920353982% 0 no-repeat;
+	background: url("../svg-spritess-479d0554.svg") 99.96592920353982% 0 no-repeat;
 }
 
 .svg-arrow-2-dims {
