--- a/src/css/modules/general.css
+++ b/src/css/modules/general.css
@@ -1,7 +1,8 @@
 body {
   background-color: azure;
-  h1 {
-    color: grey;
-    font-size: 50px;
-  }
+}
+
+h1 {
+  color: grey;
+  font-size: 10vw;
 }
